# nexus

./: CMakeLists.txt  README.md  TODO
applications/: nexus-router.c  server.c
include/nexus/: agent.h  alloc.h  basic_queue.h  container.h  context.h  ctools.h  hash.h  iterator.h  link_allocator.h  log.h  message.h  router.h  server.h  timer.h
src/: agent.c  alloc.c  alloc_private.h  auth.c  auth.h  basic_queue.c  container.c  context.c  context_pvt.h  hash.c  iterator.c  link_allocator.c  log.c  message.c  router.c  server.c  server_private.h  timer.c  timer_private.h  work_queue.c
src/posix/: threading.c
src/router/: router_control.c  router_control.h  router_node.c
tests/: CMakeLists.txt  alloc_test.c  message_test.c  run_tests.c  server_test.c  test_case.h  timer_test.c  tool_test.c  tools.c
